2009-11-08 19:16  rsbivand

	* R/AAA.R: fix unloading problem

2009-11-08 18:13  rsbivand

	* R/AAA.R: fix unloading problem

2009-11-07 14:05  rsbivand

	* man/writeOGR.Rd, ChangeLog, DESCRIPTION, inst/ChangeLog: writing
	  logical OGR fields as integer

2009-11-07 13:53  rsbivand

	* R/ogr_write.R: writing logical OGR fields as integer

2009-10-29 21:23  rsbivand

	* ChangeLog, inst/ChangeLog: tidy

2009-10-28 12:33  rsbivand

	* DESCRIPTION, R/gdal.R, R/sgdf_gdal.R, R/sp_gdal.R, R/subs.R,
	  src/gdal-bindings.cpp: reporting on GetGeoTransform failure

2009-10-05 15:46  rsbivand

	* R/sp_gdal.R, man/readGDAL.Rd, ChangeLog, inst/ChangeLog: bug fix
	  in grid parameters for offset, region and decimation together

2009-10-04 21:30  rsbivand

	* DESCRIPTION, R/sp_gdal.R, ChangeLog, inst/ChangeLog: bug fix in
	  grid parameters for offset, region and decimation together

2009-09-09 08:41  rsbivand

	* ChangeLog, inst/ChangeLog: tidy

2009-09-06 10:47  rsbivand

	* DESCRIPTION, R/sp_gdal.R, ChangeLog, inst/ChangeLog: back out of
	  structure change in GDALinfo output

2009-09-03 15:03  rsbivand

	* DESCRIPTION, man/SpatialGDAL-class.Rd, man/readGDAL.Rd,
	  man/showWKT.Rd, ChangeLog, inst/ChangeLog: tidying docs links for
	  2.10.0

2009-09-02 20:33  rsbivand

	* DESCRIPTION, NAMESPACE, R/gdal.R, R/sp_gdal.R,
	  man/GDALRasterBand-class.Rd, man/readGDAL.Rd,
	  src/gdal-bindings.cpp, ChangeLog, inst/ChangeLog: extra
	  information on band type and helpers for signed/unsigned
	  conversion

2009-08-31 22:46  rsbivand

	* DESCRIPTION, R/gdal.R, R/sp_gdal.R, man/GDALRasterBand-class.Rd,
	  man/readGDAL.Rd, src/gdal-bindings.cpp: UInt16 as Int16 in LAN
	  problem

2009-08-17 13:56  rsbivand

	* DESCRIPTION, R/gdal.R, R/sp_gdal.R, man/GDALDataset-class.Rd,
	  man/GDALTransientDataset-class.Rd, man/readGDAL.Rd,
	  man/readOGR.Rd, ChangeLog, inst/ChangeLog: added copy only driver
	  detection and handling

2009-08-14 20:48  rsbivand
